--- a/business-logic-service/pom.xml
+++ b/business-logic-service/pom.xml
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.6.0</version>
+            <version>2.8.8</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -222,7 +222,7 @@
                             </schemata>
                         </database>
                         <target>
-                            <packageName>com.github.evseevda.businesslogicservice</packageName>
+                            <packageName>com.github.evseevda.stmlabstesttask.businesslogicservice</packageName>
                             <directory>target/generated-sources/jooq</directory>
                         </target>
                     </generator>
