--- a/purchased-ticket-service/src/main/resources/application.yaml
+++ b/purchased-ticket-service/src/main/resources/application.yaml
@@ -2,19 +2,18 @@ spring:
   application:
     name: purchased-ticket-service
   datasource:
-    url: jdbc:postgresql://localhost:5433/transport_ticket_purchased_ticket_service_db
-    username: postgres
-    password: postgres
+    url: ${DATASOURCE_URL}
+    username: ${DATASOURCE_USERNAME}
+    password: ${DATASOURCE_PASSWORD}
   flyway:
     default-schema: main
     baseline-on-migrate: true
     schemas: main
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
     consumer:
       purchased-ticket-group-id: purchased-ticket
     backoff:
-      interval: 200ms
       attempts: 5
     topic:
       purchased-ticket: purchased-ticket
