--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -6,10 +6,16 @@ spring:
       server:
         webmvc:
           routes:
+              # Business logic
             - id: blService
-              uri: lb://BL-SERVICE
+              uri: lb://BUSINESS-LOGIC-SERVICE
               predicates:
                 - Path=/api/**
+              metadata:
+                cors:
+                  allowedOrigins: ${ALLOWED_ORIGINS}
+                  allowedMethods: ${ALLOWED_METHODS}
+                  allowedHeaders: ${ALLOWED_HEADERS}
 
 server:
   port: 8080
