--- a/business-logic-service/pom.xml
+++ b/business-logic-service/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.github.evseevda.stm-labs-test-task</groupId>
     <artifactId>business-logic-service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.9.0</version>
     <name>business-logic-service</name>
     <description>business-logic-service</description>
     <url/>
@@ -26,9 +26,30 @@
         <tag/>
         <url/>
     </scm>
+    <profiles>
+        <profile>
+            <id>local</id>
+            <properties>
+                <datasource.url>jdbc:postgresql://localhost:5433/transport_ticket_bl_service_db</datasource.url>
+                <datasource.username>postgres</datasource.username>
+                <datasource.password>postgres</datasource.password>
+            </properties>
+        </profile>
+        <profile>
+            <id>docker</id>
+            <properties>
+                <datasource.url>${env.DATASOURCE_URL}</datasource.url>
+                <datasource.username>${env.DATASOURCE_USERNAME}</datasource.username>
+                <datasource.password>${env.DATASOURCE_PASSWORD}</datasource.password>
+            </properties>
+        </profile>
+    </profiles>
     <properties>
         <java.version>21</java.version>
         <spring-cloud.version>2025.0.0</spring-cloud.version>
+        <datasource.url>jdbc:postgresql://localhost:5433/transport_ticket_bl_service_db</datasource.url>
+        <datasource.username>postgres</datasource.username>
+        <datasource.password>postgres</datasource.password>
     </properties>
     <dependencies>
         <dependency>
@@ -130,6 +151,11 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -166,6 +192,14 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                         </exclude>
+                        <exclude>
+                            <groupId>org.flywaydb</groupId>
+                            <artifactId>flyway-maven-plugin</artifactId>
+                        </exclude>
+                        <exclude>
+                            <groupId>org.jooq</groupId>
+                            <artifactId>jooq-codegen-maven</artifactId>
+                        </exclude>
                     </excludes>
                 </configuration>
             </plugin>
@@ -182,9 +216,9 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <url>jdbc:postgresql://localhost:5433/transport_ticket_bl_service_db</url>
-                    <user>postgres</user>
-                    <password>postgres</password>
+                    <url>${datasource.url}</url>
+                    <user>${datasource.username}</user>
+                    <password>${datasource.password}</password>
                     <defaultSchema>bl</defaultSchema>
                     <schemas>bl</schemas>
                 </configuration>
@@ -203,9 +237,9 @@
                 </executions>
                 <configuration>
                     <jdbc>
-                        <url>jdbc:postgresql://localhost:5433/transport_ticket_bl_service_db</url>
-                        <user>postgres</user>
-                        <password>postgres</password>
+                        <url>${datasource.url}</url>
+                        <user>${datasource.username}</user>
+                        <password>${datasource.password}</password>
                         <schema>bl</schema>
                     </jdbc>
                     <generator>
@@ -227,6 +261,19 @@
                         </target>
                     </generator>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.5.2</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
