--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.github.evseevda.stm-labs-test-task</groupId>
     <artifactId>eureka-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.9.0</version>
     <name>eureka-server</name>
     <description>eureka-server</description>
     <url/>
